# moatless-tree-search

./: .env.example  .gitignore  README.md  itegration_test_anthropic_claude-3-5-haiku-20241022-v1:0.json  itegration_test_claude-3-5-haiku-20241022.json  pyproject.toml  pytest.ini  requirements-test.txt  run.sh  streamlit_app.py  test_completion.py
datasets/: lite_split_1_dataset.json  lite_split_2_dataset.json  resolved_submissions.json
moatless/: completion.py  context.py  debate.py  discriminator.py  discriminators.py  exceptions.py  expander.py  feedback.py  file_context.py  loop.py  message_history.py  node.py  schema.py  search_tree.py  selector.py  settings.py  templates.py  value_function.py  workspace.py
moatless/actions/: __init__.py  action.py  append_string.py  apply_change_and_test.py  code_change.py  code_modification_mixin.py  create_file.py  edit.py  find_class.py  find_code_snippet.py  find_function.py  finish.py  identify_code_spans.py  insert_line.py  list_files.py  model.py  reject.py  request_context.py  run_tests.py  search_base.py  semantic_search.py  string_replace.py  view_code.py  view_diff.py
notebooks/: view_gold_patches.ipynb
scripts/: mcts_flow.py  repos.py  verify_basic_flow.py  verify_basic_flow_deepseek.py
testbed/: schema.py
testbed/sdk/: sdk.py  (+2 more)
tests/: deepseek_eval.py  integration_test.py  itegration_test_anthropic.claude-3-5-sonnet-20241022-v2:0.json  itegration_test_claude-3-5-sonnet-20241022.json  itegration_test_us.anthropic.claude-3-5-sonnet-20241022-v2:0.json  test_agent.py  test_completion.py  test_completion_integration.py  test_feedback.py  test_feedback_agent.py  test_file_context.py  test_message_history.py  test_node.py  test_search_tree.py  test_selector.py  test_value_function.py  traj_haiku.json
(+77 files in other folders)
